clang/test/BSC/Negative/Method/Union/union_function_call/union_function_call.cbs
// RUN: %clang_cc1 -verify %s

union SimpleUnion {
  float uf;
  int ui;
  char uc;
};

int union SimpleUnion::getA() { 
  return 1;
}

int main() {
  union SimpleUnion foo = {.ui = 1};
  union SimpleUnion *f = &foo;
  foo.getA(); // expected-error {{no instance member named 'getA' in 'union SimpleUnion'; did you mean to use '::' instead of '.'?}}
              // expected-note@-1 {{found the following member function 'getA' which doesn't have a 'this' parameter}}
  f->getA(); // expected-error {{no instance member named 'getA' in 'union SimpleUnion'; did you mean to use '::' instead of '->'?}}
             // expected-note@-1 {{found the following member function 'getA' which doesn't have a 'this' parameter}}
  return 0;
}